replaced the logo with a placeholder and fixed it on mobile phones

--- a/src/components/Header/Logo/Logo.scss
+++ b/src/components/Header/Logo/Logo.scss
@@ -3,6 +3,9 @@
 }
 @media (max-width: 575px) {
     .logo {
-        display: none;
+        position: absolute;
+        top: 5.12px;
+        left: 16px;
+        width: 100px;
     }
 }
